--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
 	],
 	"require": {
 		"php": ">=5.3.1",
-		"nette/application": "~2.0",
-		"nette/di": "~2.0",
-		"nette/http": "~2.0",
+		"nette/application": "^3.0",
+		"nette/di": "^3.0",
+		"nette/http": "^3.0",
 		"nette/reflection": "~2.0"
 	},
 	"autoload": {
